css/global.css
@font-face {
    font-family: 'Roboto';
    src: url('../assets/font/Roboto.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

:root {
    --default-scale: 16px;
}

* {
    transition: font-size .2s linear;
    -webkit-tap-highlight-color: transparent;
}

body {
    font-family: 'Roboto', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: auto;
    margin: 0;
    user-select: none;
    font-size: var(--default-scale);
}

header {
    padding: 16px;
    border-bottom: 1px solid #ddd;
    font-size: 1.2em;
    font-weight: bold;
    color: #ff0000;
}

main {
    box-sizing: border-box;
    min-height: 100vh;
    padding-bottom: 20px;
}

footer {
    padding: 16px;
    border-top: 1px solid #ddd;
    color: #727272;
    position: relative;
}

.counter-list {
    list-style-type: none;
    padding: 16px;
    margin: 0;
    max-width: 600px;
    margin: auto;
}

.empty-list {
    display: block;
    padding: 16px;
    margin-top: -32px;
}

.counter {
    padding: 4px;
    background-color: #fff3f3;
    border-radius: 4px;
    margin-bottom: 8px;
    display: flex;
    align-items: center;
    transition: all .3s ease-in-out;
    outline: 2px solid transparent;
}

.counter:hover {
    outline-color: #ffb0b0;
}

.counter__label {
    margin-right: 12px;
}

.counter svg {
    margin: auto;
    height: var(--default-scale);
}

.counter button {
    background-color: transparent;
    border-radius: .5em;
    border: none;
    cursor: pointer;
    width: calc(var(--default-scale) * 1.5);
    height: calc(var(--default-scale) * 1.5);
    display: inline-flex;
    padding: 0;
    transition: background-color .3s ease;
}

.counter button:hover {
    background-color: rgba(255, 0, 0, 0.1);
}

.counter__control {
    flex: 1;
    display: flex;
    align-items: center;
    gap: 4px;
    font-size: 1.2em;
}

.counter-form {
    padding: 16px;
    background-color: #fff6f6;
}

.counter-form h2 {
    margin: 0;
    margin-bottom: 8px;
    font-size: 1.2em;
}

#font-controller {
    position: absolute;
    bottom: 0;
    right: 0;
}

#font-control {
    accent-color: #727272;
}

.fade-enter-active,
.fade-leave-active {
    transition: all .5s ease;
}

.fade-enter-from,
.fade-leave-to {
    opacity: 0;
    transform: translateY(-10px);
}

.fade-leave-active {
    position: absolute;
    width: 592px;
}

.text-field {
    background-color: transparent;
    border: 1px solid #ffb0b0;
    border-radius: 4px;
    padding: 4px;
    font-size: .8em;
    outline-color: #ffb0b0;
    font-family: inherit;
    margin: 0 8px;
}

.btn {
    background-color: #ffd1d1;
    border: 1px solid #ffb0b0;
    border-radius: 4px;
    padding: 4px 12px;
    font-size: .8em;
    cursor: pointer;
    font-family: inherit;
    transition: background-color .3s ease;
}

.btn:hover {
    background-color: #ffc1c1;
}

